# timebloc

./: .env.example  .gitignore  README.md  SECURITY_AUDIT.md  TODO.md  package-lock.json  package.json
public/: auth.html
scripts/: dev.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  commands.rs  crypto.rs  main.rs  models.rs  search.rs  services.rs
src/app/: globals.css  page.tsx
src/lib/: calendar-service.ts  firebase.ts  validation.ts
