[package]
name = "time-blocker"
version = "0.1.0"
description = "A lightweight time blocking app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "window-start-dragging", "window-unmaximize", "window-close", "window-show", "window-minimize", "window-hide", "window-unminimize", "window-maximize", "fs-all", "path-all", "shell-open"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["fs", "rt-multi-thread"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
base64 = "0.21"
urlencoding = "2.1"
ring = "0.17"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
